Fix outer scrollbar, TX hash/address links, raw date reformatting in data modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1203,7 +1203,7 @@ body {
   left: 0;
   top: 0;
   z-index: var(--zindex-overlay);
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: hsla(var(--color-contrast-lower-h), var(--color-contrast-lower-s), var(--color-contrast-lower-l), 0.2);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
